--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "chai-http": "^4.0.0",
     "express": "^4.16.3",
+    "mongoose": "^5.1.7",
     "morgan": "^1.9.0",
     "uuid": "^3.2.1"
   },
